--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-python-telegram-bot==20.0
-google-generativeai
-python-dotenv
+google-generativeai==0.8.3
+python-telegram-bot==21.4
+requests==2.32.3
