--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-fastapi==0.110.2
-uvicorn==0.30.0
-aiohttp==3.9.5
-pytz==2023.4
 python-telegram-bot==20.8
 google-generativeai==0.7.2
-python-dotenv==1.0.1
+requests==2.32.3
